<resources>
    <string name="app_name">Unit Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="value">Value</string>
    <string name="convert">Convert</string>
    <string name="enter_a_value">Enter a Value</string>
    <string-array name="scale">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
</resources>
