<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.t00597013.unitconverter.MainActivity">

    <TextView
        android:id="@+id/fromtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/from"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fromspinner"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:entries="@array/scale"
        app:layout_constraintTop_toTopOf="@+id/fromtext"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/fromtext"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.466"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tospinner" />

    <TextView
        android:id="@+id/totext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/to"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromtext" />

    <Spinner
        android:id="@+id/tospinner"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:entries="@array/scale"
        app:layout_constraintBottom_toBottomOf="@+id/totext"
        app:layout_constraintTop_toTopOf="@+id/totext"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <TextView
        android:id="@+id/valuetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/value"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/totext" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_a_value"
        app:layout_constraintTop_toTopOf="@+id/valuetext"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/valuetext"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/convertbutton"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginLeft="48dp"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/valuetext" />

</android.support.constraint.ConstraintLayout>
